part3/e08/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todoproject-namespace
  name: todoproject-front-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoproject-front
  template:
    metadata:
      labels:
        app: todoproject-front
    spec:
      containers:
        - name: todoproject-front
          image: TODO/FRONT
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
