part3/e08/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: todoproject-namespace
  name: v-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todoproject-front-svc
            port:
              number: 2345
      # - path: /api
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: todoproject-back-svc
      #       port:
      #         number: 80
